# gradle-eta

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  build.gradle  settings.gradle
.circleci/: config.yml
examples/: README.md  upgrade.sh
examples/fatjar/: build.gradle  settings.gradle
examples/local/: build.gradle  simple.cabal
examples/multi/: README.md  build.gradle  gradle.properties  settings.gradle
examples/multi/hio/: build.gradle
examples/multi/hio/src/main/eta/Hello/: Mod.hs
examples/multi/java-deep/: build.gradle
examples/multi/java-shallow/: build.gradle
examples/multi/src/main/eta/: Main.hs
examples/simple/: README.md  build.gradle  simple.cabal
examples/simple/eta/: Lib.hs  Main.hs
examples/test/: README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/groovy/com/typelead/gradle/utils/: ArrayUtil.java  CabalInfo.java  CabalInfoParser.java  CommandLine.java  DefaultLog.java  Log.java  (+7 more)
src/test/resources/testData/default/: build.gradle
src/test/resources/testData/download/: build.gradle  example.cabal
src/test/resources/testData/run2/: build.gradle  example.cabal
src/test/resources/testData/run2/src/main/eta/: Bar.hs  Foo.hs
src/test/resources/testData/testCompile/: build.gradle  example.cabal
tests/: test.sh  upgrade.sh
tests/empty-code/: build.gradle
tests/empty-code/src/main/eta/: Main.hs
tests/fatjar/: README.md  build.gradle
tests/fatjar/src/main/eta/: Main.hs
tests/git-dep/: build.gradle  settings.gradle
tests/git-dep/src/main/eta/: Main.hs
tests/multi/: build.gradle  settings.gradle
tests/multi/hio/: build.gradle
tests/simple/: README.md  build.gradle
tests/simple/eta/: Main.hs
tests/simple/eta-test/: Main.hs
tests/test/: build.gradle
tests/test/src/main/eta/: Lib.hs
tests/test/src/test/eta/: Main.hs
(+128 files in other folders)
