name:                example
version:             0.0.1
license:             AllRightsReserved
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

-- This is needed for now to allow `etlas deps` to run.
library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  default-language:    Haskell2010

executable foo
  main-is:             Foo.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  default-language:    Haskell2010

executable bar
  main-is:             Bar.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  default-language:    Haskell2010
